--- a/medium.html
+++ b/medium.html
@@ -1,3 +1,3 @@
 <!DOCTYPE html><html><head></head><body>
-<script>window.location="https://medium.com/@xyanbhatnagar";</script>
+<script>window.location="https://medium.com/@mt909";</script>
 </body></html>
