--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Aug 2012- March 2014: Developer Team, ABU Robocon">
 <br>
 <img class="page" src="img/page (5).jpg" width="50%" alt="'Musicians are the loud voice for quiet hearts.' - Billy Joel">
 <br>
-<a href="https://music.xbhatnag.com" style="text-decoration:none">
+<a href="https://open.spotify.com/user/kv98vj7if7q46f0qmjm6lrv9x/playlist/0J1yPeExbFMHMW1bQWGX91" style="text-decoration:none">
 <img class="music" src="img/music.jpg" width="24%" alt="See my top songs" onmouseover="this.src = 'img/music-mo.jpg'" onmouseout="this.src = 'img/music.jpg'">
 </a>
 <br>
